--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash.sortby": "^4.7.7",
+    "@types/styled-components": "^5.1.26",
+    "antd": "^5.2.1",
+    "axios": "^1.3.4",
+    "lodash.sortby": "^4.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
+    "styled-components": "^5.3.8",
+    "undp-viz-colors": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
