--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash.remove": "^4.7.7",
     "@types/lodash.sortby": "^4.7.7",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.2.1",
     "axios": "^1.3.4",
+    "lodash.remove": "^4.7.0",
     "lodash.sortby": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
