--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.2.1",
     "axios": "^1.3.4",
+    "d3": "^7.8.5",
+    "d3-force": "^3.0.0",
+    "d3-scale": "^4.0.2",
     "lodash.remove": "^4.7.0",
     "lodash.sortby": "^4.7.0",
     "react": "^18.2.0",
@@ -25,6 +28,8 @@
     "undp-viz-colors": "^1.0.5"
   },
   "devDependencies": {
+    "@types/d3-force": "^3.0.4",
+    "@types/d3-scale": "^4.0.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
