--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.2.1",
     "axios": "^1.3.4",
     "d3": "^7.8.5",
+    "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
     "lodash.remove": "^4.7.0",
@@ -28,6 +29,7 @@
     "undp-viz-colors": "^1.0.5"
   },
   "devDependencies": {
+    "@types/d3-fetch": "^3.0.2",
     "@types/d3-force": "^3.0.4",
     "@types/d3-scale": "^4.0.3",
     "@types/react": "^18.0.27",
