--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@azure/msal-browser": "^2.34.0",
     "@azure/msal-react": "^1.5.4",
+    "@types/d3": "^7.4.0",
     "@types/lodash.remove": "^4.7.7",
     "@types/lodash.sortby": "^4.7.7",
     "@types/styled-components": "^5.1.26",
