--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.2.1",
     "axios": "^1.3.4",
+    "d3-array": "^3.2.4",
     "d3-fetch": "^3.0.1",
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
@@ -29,6 +30,7 @@
     "undp-viz-colors": "^1.0.5"
   },
   "devDependencies": {
+    "@types/d3-array": "^3.0.5",
     "@types/d3-fetch": "^3.0.2",
     "@types/d3-force": "^3.0.4",
     "@types/d3-scale": "^4.0.3",
