--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/d3-fetch": "^3.0.2",
     "@types/d3-force": "^3.0.4",
     "@types/d3-scale": "^4.0.3",
+    "@types/node": "^20.3.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
